--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,111 @@
 /************* BASE STYLES *************/
-* { box-sizing: border-box; }
-body { font-family: 'Open Sans', sans-serif; font-size: 14px; line-height: 1.4; color: #364147; margin: 0; }
-input, button { font-family: inherit; font-size: inherit; }
-a { color: #faa541; text-decoration: none; }
-ul { padding: 0; margin: 0; list-style: none; }
-nav { padding: 10px 0; }
-h1, h2, h3, h4, h5, h6 { margin: 0; }
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #364147;
+  margin: 0;
+}
+
+input, button {
+  font-family: inherit;
+  font-size: inherit;
+}
+
+a {
+  color: #faa541;
+  text-decoration: none;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+nav {
+  padding: 10px 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+}
 /***************************************/
+
+section {
+  display: flex;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-one {
+  flex: 1;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.center {
+  justify-content: center;
+}
+
+.space-between {
+  justify-content: space-between;
+}
+
+.container {
+  margin: 0 auto 0 auto;
+  max-width: 1170px;
+}
+
+.form-control {
+  display: block;
+  padding: 6px 12px 6px 12px;
+  border: 1px solid #a0a0a0;
+  color: #8598a2;
+  line-height: 1.4;
+}
+
+.text-light {
+  font-size: 30px;
+  color: #a0a0a0;
+}
+
+.text-secondary {
+  font-size: 30px;
+  color: #364147;
+}
+
+.text-primary {
+  font-size: 16px;
+  color: #364147;
+}
+
+.btn {
+  cursor: default;
+  border: none;
+  padding: 6px 12px 6px 12px;
+  border-radius: 3px;
+  line-height: 1.4;
+}
+
+.btn-default {
+  background-color: #faa541;
+  color: white;
+}
+
+.btn-primary {
+  background-color: #364147;
+  color: white;
+}
