--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,5 @@
 /************* BASE STYLES *************/
+
 * {
   box-sizing: border-box;
 }
@@ -34,6 +35,7 @@ nav {
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
+
 /***************************************/
 
 section {
@@ -108,4 +110,74 @@ section {
 .btn-primary {
   background-color: #364147;
   color: white;
+}
+
+.header-nav {
+  border-bottom: 1px solid #a0a0a0;
+}
+
+.brand {
+  width: 170px;
+  height: 85px;
+  margin-left: -15px;
+  margin-right: 60px;
+}
+
+.logo {
+  max-width: 100%;
+  height: auto;
+}
+
+.search-box {
+  width: 330px;
+  height: 30px;
+  padding: 6px 12px 6px 12px;
+  border: 1px solid #a0a0a0;
+}
+
+.search-button {
+  width: 100px;
+  height: 30px;
+  padding: 0;
+  border: 0;
+  background-color: #a0a0a0;
+  color: #ffffff;
+}
+
+.nav-list {
+  width: 575px;
+  padding-left: 0;
+  margin-top: 10px;
+}
+
+.nav-list li > a {
+  font-size: 16px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.2px;
+}
+
+.profile {
+  margin-left: auto;
+}
+
+.account {
+  padding: 15px;
+  color: #364147;
+  text-align: right;
+  font-size: 18px;
+}
+
+.account li {
+  font-size: 14px;
+}
+
+.profile-pic {
+  width: 60px;
+  height: 60px;
+}
+
+.profile-pic img {
+  max-width: 100%;
+  border-radius: 100px;
 }
