--- a/css/main.css
+++ b/css/main.css
@@ -150,7 +150,7 @@ section {
   margin-top: 10px;
 }
 
-.nav-list li > a {
+.nav-list li a {
   font-size: 16px;
   font-weight: 700;
   text-transform: uppercase;
@@ -168,7 +168,7 @@ section {
   font-size: 18px;
 }
 
-.account li {
+.account a {
   font-size: 14px;
 }
 
