--- a/css/main.css
+++ b/css/main.css
@@ -205,13 +205,13 @@ section {
   color: #faa541;
 }
 
-.hero div > h1, h2 {
+.hero h1, .hero h2 {
   font-size: 63px;
   font-weight: 700;
   line-height: 0.9;
 }
 
-.hero div > p {
+.hero p {
   margin: 0 0 10px;
   font-size: 21px;
   font-weight: 700;
