--- a/css/main.css
+++ b/css/main.css
@@ -189,8 +189,8 @@ section {
 /************* HERO Section *************/
 
 .hero {
-  height: 400px;
   background-image: url(/img/hero.jpg);
+  height: 400px;
   background-size: cover;
   background-position: center;
   text-transform: uppercase;
@@ -201,7 +201,7 @@ section {
   left: -30px;
 }
 
-.hero div > h2 {
+.hero h2 {
   color: #faa541;
 }
 
