--- a/css/main.css
+++ b/css/main.css
@@ -189,14 +189,14 @@ section {
 /************* HERO Section *************/
 
 .hero {
-  background-image: url(/img/hero.jpg);
+  background-image: url('../img/hero.jpg');
   height: 400px;
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   text-transform: uppercase;
 }
 
-.hero div {
+.hero h1 {
   position: relative;
   left: -30px;
 }
