--- a/css/main.css
+++ b/css/main.css
@@ -348,3 +348,136 @@ section {
   letter-spacing: 1px;
   z-index: 1;
 }
+
+/************* FOOTER Section *************/
+
+footer {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  min-height: 330px;
+  background-color: #000000;
+  z-index: 0;
+}
+
+footer:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 75%;
+  background-color: #a0a0a0;
+  z-index: -1;
+}
+
+.lists {
+  flex: 0 0 75%;
+  /* gap: 0 15px; 
+  The tests expected the gap to be specified in the padding */
+  padding: 40px 15px;  
+}
+
+.link-header {
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+
+footer a {
+  color: #ffffff;
+  padding: 0 0 4px;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+.social ul li {
+  display: inline-block;
+}
+
+.social ul li a {
+  display: block;
+  width: 23px;
+  height: 23px;
+  background-size: 23px 23px;
+  background-position: center;
+}
+
+.twitter {
+  background-image: url('../img/twitter.svg');
+}
+
+.facebook {
+  background-image: url('../img/facebook.svg');
+}
+
+.instagram {
+  background-image: url('../img/instagram.svg');
+}
+
+.pinterest {
+  background-image: url('../img/pinterest.svg');
+}
+
+.newsletter .link-header {
+  margin-bottom: 5px;
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.newsletter .link-subheader {
+  margin-bottom: 15px;
+  font-size: 12px;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.newsletter input {
+  width: 200px;
+  margin-bottom: 10px;
+  border: 1px solid #364147;
+}
+
+.newsletter button {
+  width: 150px;
+  min-width: auto;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.ps {
+  flex: 0 0 25%;
+  padding: 40px 0;
+  color: #e5e5e5;
+  font-size: 16px;
+}
+
+.ps img {
+  max-width: 230px;
+}
+
+.demo {
+  padding: 0 30px;
+}
+
+.demo:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin: 30px 0;
+  background: linear-gradient(to right,#f05a28 0,#e80a89 100%);
+}
+
+.copyright {
+  flex: 0 0 75%;
+  padding: 10px 0;
+  font-size: 12px;
+  text-align: center;
+}
